--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
   <header class="hero-section">
-    <nav class="navbar">
+    <div>
+      <nav class="navbar">
       <div class="nav-wrap">
         <span class="nav-logo">Sai Krishna Chekka</span>
         <ul class="nav-links">
@@ -25,6 +26,7 @@
         </ul>
       </div>
     </nav>
+    </div>
     <div class="hero-bg-anim"></div>
     <div class="hero-content glass">
       <img src="profile.jpg" alt="Sai Krishna Chekka" class="profile-pic">
@@ -182,4 +184,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
