--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="hero-links">
           <a href="mailto:schekka@rockets.utoledo.edu" class="btn">Email</a>
           <a href="https://www.linkedin.com/in/saikrishna-chekka-881339221" class="btn" target="_blank">LinkedIn</a>
-          <a href="Sai_Krishna_Chekka.pdf" class="btn" target="_blank">Resume</a>
+          <a href="SAI_KRISHNA_CHEKKA_RESUME.pdf" class="btn" target="_blank">Resume</a>
         </div>
       </div>
     </div>
@@ -184,4 +184,5 @@
 </body>
 
 </html>
+
 
